--- a/src/style/calender.scss
+++ b/src/style/calender.scss
@@ -70,6 +70,13 @@ $deepBlue: #2f80c3;
       }
       .days {
         font-size: 14px;
+        span {
+          cursor: pointer;
+          transition: all .5s;
+        }
+        .unselect {
+          cursor: default;
+        }
       }
     }
 }
@@ -89,12 +96,25 @@ $deepBlue: #2f80c3;
   .weekend {
     color: $deepBlue;
   }
-  .unselect {
-    color: #ccc;
-  }
-  .select {
-    border-radius: 2px;
-    background-color: $deepBlue;
-    color: #fff;
+  .days {
+    span {
+      &:hover {
+        border-radius: 2px;
+        background-color: $blue;
+        color: #fff;       
+      }
+    }
+    .unselect,
+    .unselect:hover {
+      border-radius: 0;
+      background-color: #fff;
+      color: #ccc;
+    }
+    .select,
+    .select:hover {
+      border-radius: 2px;
+      background-color: $deepBlue;
+      color: #fff;
+    }
   }
 }
