--- a/src/style/calender.scss
+++ b/src/style/calender.scss
@@ -169,3 +169,13 @@ $deepRed: #cb1b01;
     }
   }
 }
+/*@media screen and (max-width: 480px) {
+  .calendar-input-container{
+    .calendar-input {
+    width: 150px;
+  }
+    #calendar {
+      width: 150px;
+    }
+}
+}*/
